--- a/blank.html
+++ b/blank.html
@@ -20,7 +20,16 @@
         <a href="index.html" class="logo">
           <img src="img/logo.svg" alt="Логотип ТЕХНОМАРТ" width="108" height="18">
         </a>
-        <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+        <label class="header-search-field">
+          <input type="search" class="search-field" name="search" id="search-field" placeholder="Поиск:">
+          <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+            <g opacity="0.3">
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z"
+                fill="white" />
+            </g>
+          </svg>
+        </label>
         <a href="blank.html" class="header-top-link header-bookmarks">Закладки: 0</a>
         <a href="blank.html" class="header-top-link header-cart">Корзина: 0</a>
         <a href="blank.html" class="header-top-link header-ordering">Оформить заказ</a>
@@ -28,38 +37,51 @@
     </section>
     <section class="header-middle container">
       <p class="header-text">Интернет-магазин <br>строительных материалов <br>и инструментов для ремонта</p>
-      <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
-      <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <a href="blank.html" class="header-btn btn-login">Войти</a>
-      <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
+      <div class="header-middle-contacts">
+        <a href="tel:+78125550555" class="header-phone">+7 (812) 555-05-55</a>
+        <address class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      </div>
+      <div class="header-middle-buttons">
+        <a href="blank.html" class="header-btn btn-login">
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17" fill="none">
+            <path d="M14.1667 8.5L5.71429 0V6H0V11H5.71429V17L14.1667 8.5Z" fill="#C5C5C5" />
+            <path
+              d="M16.1771 15.01H11.3895V17H16.1771C18.2514 17 19.0381 15.19 19.0619 13.974V3.028C19.0381 1.811 18.2514 0 16.1771 0H11.3895V1.99H16.1771C16.9762 1.99 17.1219 2.671 17.1391 3.047V13.951C17.1229 14.327 16.9762 15.01 16.1771 15.01Z"
+              fill="#C5C5C5" />
+          </svg>
+          Войти
+        </a>
+        <a href="blank.html" class="header-btn btn-registration">Регистрация</a>
+      </div>
     </section>
     <div class="container">
       <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li class="navigation-item">
-          <a href="index.html" class="navigation-link">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Компания</a>
-        </li>
-        <li class="navigation-item">
-          <a href="catalog.html" class="navigation-link">Каталог</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Новости</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Спецпредложения</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Доставка</a>
-        </li>
-        <li class="navigation-item">
-          <a href="blank.html" class="navigation-link">Контакты</a>
-        </li>
-      </ul>
-    </nav>
+        <ul class="site-navigation">
+          <li class="navigation-item">
+            <a href="index.html" class="navigation-link">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Компания</a>
+          </li>
+          <li class="navigation-item">
+            <a href="catalog.html" class="navigation-link">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Новости</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Спецпредложения</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blank.html" class="navigation-link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
     </div>
+
   </header>
   <main class="container">
     <h1>Пустая страница</h1>
@@ -67,65 +89,81 @@
   </main>
   <footer class="page-footer main-footer">
     <div class="footer-top">
-      <div class="grid-footer-top container">
-        <a href="index.html" class="logo-footer">
-          <img src="img/logo-footer.svg" alt="ТЕХНОМАРТ" width="138" height="23">
-        </a>
-        <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-        <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
-        <ul class="footer-navigation-list">
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Компания</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Новости</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="catalog.html" class="footer-navigation-link">Каталог</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Доставка</a>
-          </li>
-          <li class="footer-navigation-item">
-            <a href="blank.html" class="footer-navigation-link">Контакты</a>
-          </li>
-        </ul>
-        <ul class="footer-catalog-list">
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Материалы</a>
-          </li>
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Техника</a>
-          </li>
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Инструмент</a>
-          </li>
-          <li class="footer-catalog-item">
-            <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
-          </li>
-        </ul>
+      <div class="footer-top-inner container">
+        <div class="footer-top-left">
+          <a href="index.html" class="logo-footer">
+            <img src="img/logo-footer.svg" alt="ТЕХНОМАРТ" width="138" height="23">
+          </a>
+          <address class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+          <a href="tel:+78125550555" class="footer-phone">+7 (812) 555-05-55</a>
+        </div>
+        <div class="footer-top-right">
+          <ul class="footer-navigation-list">
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Компания</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Новости</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="catalog.html" class="footer-navigation-link">Каталог</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Доставка</a>
+            </li>
+            <li class="footer-navigation-item">
+              <a href="blank.html" class="footer-navigation-link">Контакты</a>
+            </li>
+          </ul>
+          <ul class="footer-catalog-list">
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Материалы</a>
+            </li>
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Техника</a>
+            </li>
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Инструмент</a>
+            </li>
+            <li class="footer-catalog-item">
+              <a href="blank.html" class="footer-catalog-link">Спецпредложения</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
 
     <div class="footer-bottom">
-      <div class="grid-footer-bottom container">
+      <div class="footer-bottom-inner container">
         <p class="footer-copyright">&copy; 2010-2020 Компания «Техномарт» <br>
           Все права защищены</p>
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="footer-social-link">Вконтакте</a>
+            <a href="vk.com" class="footer-social-link social-link-vk">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link">Facebook</a>
+            <a href="facebook.com" class="footer-social-link social-link-fb">
+              <span class="visually-hidden">Facebook</span>
+            </a>
           </li>
           <li class="footer-social-item">
-            <a class="footer-social-link">Instagram</a>
+            <a href="instagram.com" class="footer-social-link social-link-in">
+              <span class="visually-hidden">Instagram</span>
+            </a>
           </li>
         </ul>
-        <p class="footer-contacts-text footer-email">Обратная связь</p>
-        <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
-        <p class="footer-contacts-text footer-develop">Разработано -</p>
-        <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+        <div class="footer-bottom-right">
+          <div class="feedback">
+            <p class="footer-contacts-text footer-email">Обратная связь:</p>
+            <a href="mail@htmlacademy.ru" class="footer-contacts-link footer-email">mail@htmlacademy.ru</a>
+          </div>
+          <div class="develop">
+            <p class="footer-contacts-text footer-develop">Разработано -</p>
+            <a href="https://htmlacademy.ru" class="footer-contacts-link footer-develop">htmlacademy.ru</a>
+          </div>
+        </div>
       </div>
     </div>
   </footer>
